src/objects/SFDC_Enrollment__c.object
<CustomObject>
    <description>Connector object that associates a Student to a Class.</description>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <referenceTo>SFDC_Class__c</referenceTo>
        <relationshipName>R00N40000001QAyfEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Student Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N40000001QAygEAG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Enrollment</label>
    <listViews>
        <fullName>AllEnrollments</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Class__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Enrollments</label>
    </listViews>
    <listViews>
        <fullName>CompletedEnrollments</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Enrollments</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Enrollment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>